--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
                 
                 <button id="btn" type="submit">S'inscrire</button>
             </form>
-            <div id="check" >
-                <h2>Vos informations</h2>
-                <p>Nom : <span id="checknom"></span></p>
-                <p>Prénom : <span id="checkprenom"></span></p>
-                <p>Date de naissance : <span id="checkdate"></span></p>
-                <p>Numéro de téléphone : <span id="checknumero"></span></p>
-                <p>Motivation :</p>
-                <p id="checkmotivation"></p>
+            <!-- Recap Section -->
+                  <div id="check" class="recap-section">
+                      <h2>Récapitulatif de votre inscription</h2>
+                      <p><strong>Nom:</strong> <span id="checknom"></span></p>
+                      <p><strong>Prénom:</strong> <span id="checkprenom"></span></p>
+                      <p><strong>Date de naissance:</strong> <span id="checkdate"></span></p>
+                      <p><strong>Numéro de téléphone:</strong> <span id="checknumero"></span></p>
+                      <p><strong>Motivation:</strong> <span id="checkmotivation"></span></p>
+                  </div>
 
                 
             </div>
